# conan-tsil

./: .travis.yml  CMakeLists.txt  FindTSIL.cmake  README.md  build.py  conanfile.py
.travis/: install.sh
examples/: CMakeLists.txt  README.md  conanfile.txt
test_package/: CMakeLists.txt  Makefile  conanfile.py  meson.build  test_tsil.cpp
test_package_extern/: CMakeLists.txt  Makefile  conanfile.txt
